--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,9 @@
     "@mui/material": "^7.0.1",
     "@mui/x-data-grid": "^7.28.2",
     "@mui/x-date-pickers": "^7.28.2",
+    "@tanstack/react-query": "^5.70.0",
+    "@tanstack/react-query-devtools": "^5.70.0",
+    "axios": "^1.8.4",
     "date-fns": "^4.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
