master(): add Readme File

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,3 +2,8 @@
 APP_ENV=development
 APP_DOMAIN=localhost:3001
 APP_PORT=3001
+POSTGRES_USER=YOUR_POSTGRESS_USER
+POSTGRES_PASSWORD=YOUR_POSTGRES_PASSWORD
+POSTGRES_HOST=YOUR_POSTGRES_HOST
+POSTGRES_PORT=YOUR_POSTGRES_PORT
+POSTGRES_DB=YOUR_POSTGRES_DB
